--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,11 @@ html,body{
 }
 
 .center{
-	width: 1200px;
 	margin: 0 auto;
 	padding:0 2%;
 }
 
 .header{
-	min-width: 1200px;
 	width: 100%;
 	height: 60px;
 	background-color: #212343;
@@ -37,7 +35,6 @@ html,body{
 
 .container-banner{
 	width: 100%;
-	min-width: 1200px;
 	height: 557px;
 	background-image:url('../images/header_bg.png');
 	background-size: cover;
@@ -148,7 +145,6 @@ html,body{
 }
 
 .container-2{
-	min-width: 1200px;
 	padding:40px 0;
 	background-color: #ddd;
 	text-align: center;
@@ -159,8 +155,7 @@ html,body{
 }
 
 .container-2 p{
-	width: 698px;
-	margin:15px 0;
+	margin:15px;
 	display: inline-block;
 	text-align: justify;
 }
@@ -177,7 +172,6 @@ html,body{
 }
 
 .section-1{
-	min-width: 1200px;
 	padding:90px 0;
 }
 
@@ -230,4 +224,54 @@ html,body{
 	box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
     border-radius: 6px;
 }
+
+@media (max-width: 1000px) {
+	.container-list-tnks p{
+		font-size: 40px;
+	}
+
+	.container-list-tnks, .container-list {
+		margin-top: 25%;
+	}
+
+	.form {
+		top: +25px;
+	}
+
+	.container-section{
+		display: block !important;
+	}
+
+	.container-single {
+		width: auto;
+		margin: 10%;
+	}
+
+
+	.form {
+	    /* align-items: center; */
+	    padding: 10px;
+	    width: 100%;
+	    height: auto;
+	    float: right;
+	    position: relative;
+	    top: -25px;
+	    border-width: 12px;
+	    border-color: rgba(120,120,120,0.5);
+	    border-style: solid;
+	    background-color: white;
+	    background-clip: padding-box;
+	    text-align: center;
+	    margin-top: 10%;
+	}
+
+	.input-container input[type=text] {
+    margin-top: 8px;
+    width: 100%;
+    height: 55px;
+    border: 1px solid #ccc;
+	}
+
+}
+
 
