--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html,body{
 
 .form{
 	padding:10px;
-	width: 400px;
+	width: 550px;
 	height: calc(100% + 50px);
 	float: right;
 	position: relative;
@@ -71,6 +71,7 @@ html,body{
 
 .input-container{
 	margin-top:20px;
+	margin-right: 20px;
 }
 
 .input-container span{
@@ -89,10 +90,11 @@ html,body{
 }
 
 .input-container input[type=text]{
-	margin-top:8px;
-	width: 344px;
-	height: 55px;
-	border:1px solid #ccc;
+    margin-top: 8px;
+    margin-left: 8px;
+    width: 100%;
+    height: 55px;
+    border: 1px solid #ccc;
 }
 
 .form .input-submit-container{
